# birdplan

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
birdplan/: __init__.py  __main__.py  bgpq3.py  cmdline.py  exceptions.py  monitor.py  peeringdb.py  plugin.py  version.py
birdplan/bird_config/: __init__.py  base.py  config_parser.py  constants.py  globals.py  logging.py  main.py  master.py  router_id.py  util.py
birdplan/bird_config/protocol/: __init__.py  device.py  direct.py  kernel.py  ospf.py  pipe.py  rip.py  static.py
birdplan/bird_config/sections/: __init__.py  base.py  constants.py  functions.py  log.py  logging.py  main.py  router_id.py
birdplan/console/: __init__.py  colors.py
birdplan/plugins/: __init__.py
birdplan/plugins/cmdline/: __init__.py  cmdline_plugin.py  configure.py  monitor.py
birdplan/yaml/: __init__.py  base.py  pyaml.py  ruamel.py
contrib/test-environment/: Dockerfile  README.md  docker-compose.yml  full-test-incremental  full-test-incremental-write-expected  runtest
docs/: configuration.md  protocol-bgp-appendix.md  protocol-bgp.md  protocol-ospf.md  protocol-rip.md  route-transversal.md  static-routing.md
src/birdplan/: __init__.py  __main__.py  bgpq3.py  cmdline.py  exceptions.py  monitor.py  peeringdb.py  plugin.py  version.py
src/birdplan/bird_config/: __init__.py  config_parser.py  globals.py  util.py
src/birdplan/console/: __init__.py  colors.py
src/birdplan/plugins/: __init__.py
src/birdplan/yaml/: __init__.py  base.py  pyaml.py  ruamel.py
systemd/: birdplan-monitor.service
tests/: README.md  basetests.py  conftest.py  openssh.py  simulation.py  template_exabgp.py  yaml-test.ipynb
tests/10-basic/: r2.yaml  test_static.py
tests/10-basic/static/: README.md  data_static_no_export_kernel.py  template.py  test_static.py  test_static_no_export_kernel.py
tests/20-rip/basic/: data_rip.py  data_rip_no_export_kernel.py  template.py  test_rip.py  test_rip_no_export_kernel.py
tests/20-rip/no_export_kernel/: README.md  r1.yaml  r2.yaml  test_rip_no_export_kernel.py
tests/20-rip/no_redistribute_rip/: r2.yaml  test_no_redistribute_rip.py
tests/20-rip/redistribute_connected/: README.md  test_rip_redistribute_connected.py
tests/20-rip/redistribute_connected_with_star/: test_rip_redistribute_connected_with_star.py
tests/20-rip/redistribute_kernel/: README.md  test_rip_redistribute_kernel.py
tests/20-rip/redistribute_only_default/: README.md  test_rip_redistribute_only_default.py
tests/20-rip/redistribute_static/: test_rip_redistribute_static.py
tests/20-rip/redistribute_static_default/: r3.yaml  test_rip_redistribute_static_default.py
tests/20-rip/redistribute_static_without_default/: README.md  r1.yaml  r2.yaml  test_rip_redistribute_static_without_default.py
tests/30-ospf/no_export_kernel/: README.md  r2.yaml  test_ospf_no_export_kernel.py
tests/30-ospf/redistribute_connected/: r1.yaml  test_ospf_redistribute_connected.py
tests/30-ospf/redistribute_connected_with_star/: test_ospf_redistribute_connected_with_star.py
tests/30-ospf/redistribute_kernel/: README.md  test_ospf_redistribute_kernel.py
tests/30-ospf/redistribute_only_default/: README.md  r1.yaml  test_ospf_redistribute_only_default.py
tests/30-ospf/redistribute_static/: r1.yaml  r2.yaml  test_ospf_redistribute_static.py
tests/30-ospf/redistribute_static_default/: r1.yaml  test_ospf_redistribute_static_default.py
tests/30-ospf/redistribute_static_without_default/: README.md  r1.yaml  test_ospf_redistribute_static_without_default.py
tests/30-ospf/stub_interface/: README.md  test_ospf_stub_interface.py
tests/40-bgp/10-no_export_kernel/: README.md  test_bgp_no_kernel_export.py
tests/40-bgp/10-redistribute_connected/: r1.yaml  test_bgp_redistribute_connected.py  test_bgp_redistribute_connected_large_community.py
tests/40-bgp/10-redistribute_connected_with_star/: README.md  r1.yaml  test_bgp_redistribute_connected_with_star.py  test_bgp_redistribute_connected_with_star_large_community.py
tests/40-bgp/10-redistribute_kernel/: README.md  r1.yaml  test_bgp_redistribute_kernel.py  test_bgp_redistribute_kernel_large_community.py
tests/40-bgp/10-redistribute_only_default/: r1.yaml  test_bgp_redistribute_only_default.py  test_bgp_redistribute_only_default_large_community.py
tests/40-bgp/10-redistribute_originated/: test_bgp_redistribute_originated.py  test_bgp_redistribute_originated_large_community.py
tests/40-bgp/10-redistribute_static/: README.md  r1.yaml  test_bgp_redistribute_static.py  test_bgp_redistribute_static_large_community.py
tests/40-bgp/10-redistribute_static_default/: r1.yaml  test_bgp_redistribute_static_default.py  test_bgp_redistribute_static_default_large_community.py
tests/40-bgp/10-redistribute_static_without_default/: r1.yaml  test_bgp_redistribute_static_without_default.py
tests/40-bgp/20-community_stripping/: test_bgp_stripping_community.py  test_bgp_stripping_large_community_filtered.py  test_bgp_stripping_large_community_information.py
tests/40-bgp/30-incoming_large_communities/: README.md  r2.yaml  test_bgp_incoming_large_communities.py
tests/40-bgp/30-outgoing_large_communities/: README.md  r1.yaml  r2.yaml  test_bgp_outgoing_large_communities.py
tests/40-bgp/40-filtering/: README.md  test_bgp_filtering_as_path_too_long.py  (+18 more)
tests/basic/: diagram.dia  static-r1.yaml  static.py  test_static.py
tests/static/: README.md  test_static.py
tests/t05_internal/: __init__.py  test_pyaml.py  test_ruamel.py
tests/t08_commandline/: __init__.py  test_version.py
tests/t20_rip/: __init__.py
tests/t30_ospf/: __init__.py
tests/t40_bgp/: __init__.py  helpers.py
tests/test_basic/: diagram.dia  test_basic_static-r2.yaml  test_basic_static.py
(+17930 files in other folders)
