[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "birdplan"
description = "BirdPlan configuration file generator."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
	{ name = "Nigel Kukard", email = "nkukard@LBSD.net" }
]
keywords = ["routing", "networking", "BGP", "RIP", "RIPv2", "RIPv3", "OSPF", "OSPFv3"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
]
dynamic = ["version"]
dependencies = [
# NK: Add these back after development
    "birdclient @ git+https://gitlab.oscdev.io/software/birdclient.git@master",
    "click",
    "jinja2",
    "packaging",
    "ruamel.yaml",
    "requests",
]


[project.scripts]
birdplan = "birdplan:cmdline.main"
birdplan-monitor = "birdplan:monitor.main"


[project.urls]
Homepage = "https://gitlab.oscdev.io/software/birdplan"
"Issue Tracker" = "https://gitlab.oscdev.io/software/birdplan/-/issues"
"Source Code" = "https://gitlab.oscdev.io/software/birdplan"
Documentation = "https://software.pages.oscdev.io/birdplan"


[tox]
isolated_build = true


[tool.poetry]
name = "birdplan"
#version = "x.x.x"
description = "BirdPlan configuration file generator."
authors = ["Nigel Kukard <nkukard@LBSD.net>"]
packages = [
    { include = "birdplan" }
]

[tool.setuptools.dynamic]
version = {attr = "birdplan.version.__version__"}

[tool.black]
line-length = 132


[tool.isort]
line_length = 120
profile = "black"


[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 132
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D202", "D203", "D211", "D212", "EM101", "EM102", "ISC001", "TID252", "TRY003", "LOG015"]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings
docstring-code-format = true


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.coverage.run]
source_pkgs = ["birdplan"]
relative_files = true
